[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Main_scene.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/EQUIPAMENT_SLOT.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.576471, 0.0627451, 0.0627451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.192157, 0.0470588, 0.0235294, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.121569, 0.282353, 0.654902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0156863, 0.0509804, 0.141176, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.384314, 0.0941176, 0.635294, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0862745, 0.0196078, 0.141176, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[node name="Main_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 720.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 300.0
margin_right = 980.0
margin_bottom = 720.0
color = Color( 0.258824, 0.211765, 0.211765, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 980.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.192157, 0.172549, 0.121569, 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
columns = 3

[node name="PLAYER" type="GridContainer" parent="GridContainer"]
margin_right = 300.0
margin_bottom = 720.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="INFOS" type="GridContainer" parent="GridContainer/PLAYER"]
margin_right = 300.0
margin_bottom = 222.0

[node name="LEVEL" type="Label" parent="GridContainer/PLAYER/INFOS"]
margin_right = 300.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "HUMAN
ROGUE
LEVEL: "
align = 1
valign = 1

[node name="Label" type="Label" parent="GridContainer/PLAYER/INFOS"]
margin_top = 58.0
margin_right = 300.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "HEALTH"
align = 1
valign = 1

[node name="HEALTH" type="ProgressBar" parent="GridContainer/PLAYER/INFOS"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="NUM" type="Label" parent="GridContainer/PLAYER/INFOS/HEALTH"]
margin_left = 5.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "actual_health/max_health"
align = 1
valign = 1

[node name="Label2" type="Label" parent="GridContainer/PLAYER/INFOS"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "MANA"
align = 1
valign = 1

[node name="MANA" type="ProgressBar" parent="GridContainer/PLAYER/INFOS"]
margin_top = 134.0
margin_right = 300.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="NUM2" type="Label" parent="GridContainer/PLAYER/INFOS/MANA"]
margin_left = 5.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "actual_mana/max_mana"
align = 1
valign = 1

[node name="Label3" type="Label" parent="GridContainer/PLAYER/INFOS"]
margin_top = 170.0
margin_right = 300.0
margin_bottom = 186.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "EXPERIENCE"
align = 1
valign = 1

[node name="EXP" type="ProgressBar" parent="GridContainer/PLAYER/INFOS"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
percent_visible = false

[node name="NUM3" type="Label" parent="GridContainer/PLAYER/INFOS/EXP"]
margin_left = 5.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "actual_xp/level*100 + 50"
align = 1
valign = 1

[node name="HEAD" type="GridContainer" parent="GridContainer/PLAYER"]
margin_top = 226.0
margin_right = 300.0
margin_bottom = 290.0
size_flags_horizontal = 3

[node name="HEAD" type="TextureRect" parent="GridContainer/PLAYER/HEAD" groups=["HEAD"]]
margin_left = 118.0
margin_right = 182.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="UPPER" type="GridContainer" parent="GridContainer/PLAYER"]
margin_top = 294.0
margin_right = 300.0
margin_bottom = 358.0
columns = 3

[node name="SHOULDER1" type="TextureRect" parent="GridContainer/PLAYER/UPPER" groups=["SHOULDER1"]]
margin_left = 17.0
margin_right = 81.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="CHEST" type="TextureRect" parent="GridContainer/PLAYER/UPPER" groups=["CHEST"]]
margin_left = 118.0
margin_right = 182.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="SHOULDER2" type="TextureRect" parent="GridContainer/PLAYER/UPPER" groups=["SHOULDER2"]]
margin_left = 219.0
margin_right = 283.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MIDDLE" type="GridContainer" parent="GridContainer/PLAYER"]
margin_top = 362.0
margin_right = 300.0
margin_bottom = 426.0
columns = 3

[node name="FOREARM1" type="TextureRect" parent="GridContainer/PLAYER/MIDDLE" groups=["FOREARM1"]]
margin_left = 17.0
margin_right = 81.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="PANTS" type="TextureRect" parent="GridContainer/PLAYER/MIDDLE" groups=["PANTS"]]
margin_left = 118.0
margin_right = 182.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="FOREARM2" type="TextureRect" parent="GridContainer/PLAYER/MIDDLE" groups=["FOREARM2"]]
margin_left = 219.0
margin_right = 283.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="DOWN" type="GridContainer" parent="GridContainer/PLAYER"]
margin_top = 430.0
margin_right = 300.0
margin_bottom = 494.0
columns = 4

[node name="WEAPON1" type="TextureRect" parent="GridContainer/PLAYER/DOWN" groups=["WEAPON1"]]
margin_left = 4.0
margin_right = 68.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="FEET1" type="TextureRect" parent="GridContainer/PLAYER/DOWN" groups=["FEET1"]]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="FEET2" type="TextureRect" parent="GridContainer/PLAYER/DOWN" groups=["FEET2"]]
margin_left = 156.0
margin_right = 220.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="WEAPON2" type="TextureRect" parent="GridContainer/PLAYER/DOWN" groups=["WEAPON2"]]
margin_left = 232.0
margin_right = 296.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="DOWN2" type="GridContainer" parent="GridContainer/PLAYER"]
margin_top = 498.0
margin_right = 300.0
margin_bottom = 562.0
columns = 4

[node name="RING1" type="TextureRect" parent="GridContainer/PLAYER/DOWN2" groups=["RING1"]]
margin_left = 4.0
margin_right = 68.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="AMULET1" type="TextureRect" parent="GridContainer/PLAYER/DOWN2" groups=["AMULET1"]]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="AMULET2" type="TextureRect" parent="GridContainer/PLAYER/DOWN2" groups=["AMULET2"]]
margin_left = 156.0
margin_right = 220.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="RING2" type="TextureRect" parent="GridContainer/PLAYER/DOWN2" groups=["RING2"]]
margin_left = 232.0
margin_right = 296.0
margin_bottom = 64.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ACTION" type="GridContainer" parent="GridContainer"]
margin_left = 304.0
margin_right = 976.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="INVENTORY" type="GridContainer" parent="GridContainer"]
margin_left = 980.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="Label" type="Label" parent="GridContainer/INVENTORY"]
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "INVENTORY"
align = 1
valign = 1

[node name="INVENTORY" type="GridContainer" parent="GridContainer/INVENTORY" groups=["INVENTORY"]]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
